--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=eu-west-2
+PROJECT_AWS_ACCESS_KEY_ID=
+PROJECT_AWS_SECRET_ACCESS_KEY=
+PROJECT_AWS_REGION=eu-west-2
 
 VERCEL_URL=http://localhost:3000/
