--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "patch-delivery-slots",
+  "name": "delivery-slots",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/natewoodbridge/patch-delivery-slots.git"
+    "url": "git+https://github.com/natewoodbridge/delivery-slots.git"
   },
   "author": "Nate Woodbridge <hi@natewoodbridge.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/natewoodbridge/patch-delivery-slots/issues"
+    "url": "https://github.com/natewoodbridge/delivery-slots/issues"
   },
-  "homepage": "https://github.com/natewoodbridge/patch-delivery-slots#readme",
+  "homepage": "https://github.com/natewoodbridge/delivery-slots#readme",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.6",
