--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "apollo-server-micro": "^2.14.5",
+    "babel-plugin-styled-components": "^1.10.7",
     "typescript": "^3.9.5"
   }
 }
